fix bg overlap

--- a/src/app/components/common/card/card.style.scss
+++ b/src/app/components/common/card/card.style.scss
@@ -43,7 +43,7 @@
       }
 
       .card-text {
-        font-size: 12px;
+        //font-size: 12px;
         display: block;
       }
 
